# ddg-spotlight

./: AGENTS.md  Cargo.toml  README.md  hypr-ddg-spotlight.conf
src/: app.rs  ddg.rs  local.rs  main.rs  search.rs  theme.rs  ui.rs
