[package]
name = "ddg-spotlight"
version = "0.1.0"
edition = "2021"
description = "A Spotlight-style DuckDuckGo web search TUI for Omarchy/Hyprland"

[[bin]]
name = "ddg-spotlight"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
scraper = "0.27.0"
ignore = "0.4.26"
fuzzy-matcher = "0.3.7"

[profile.release]
opt-level = "z"
lto = true
strip = true
